--- a/newtab.html
+++ b/newtab.html
@@ -1,80 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Custom New Tab</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Custom New Tab</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=apps"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
 
-  <div class="container">
-    <!-- Background Image -->
-    <div class="background"></div>
+      <!-- Background  video or Image -->
 
-    <!-- Time and Date -->
-    <div class="time-container">
-      <div class="time">21:41</div>
-      <div class="date">Monday, November 4</div>
-    </div>
+  <div class="video-background">
+    <video autoplay muted loop class="background-video">
+      <source src="bg/earth_25fps.mp4" type="video/mp4">
+      
+  </video>
 
-    <!-- Search Bar -->
-    <div class="search-bar">
-      <input type="text" placeholder="Search">
-    </div>
+  </div>
+    
+      <!-- <div class="background"></div> -->
 
-    <!-- Bookmarks and Categories -->
-    <div class="bookmarks-container">
-      <div class="tabs">
-        <button class="tab active">Bookmarks</button>
-        <button class="tab">Web Development</button>
-        <button class="tab add-tab">+</button>
+      <!-- Time and Date -->
+      <div class="time-container">
+        <div class="time">21:41</div>
+        <div class="date">Monday, November 4</div>
+      </div>
+
+      <!-- Search Bar -->
+
+      <div class="search-bar">
+        <div class="search-icon">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <input type="text" placeholder="Search" />
+      </div>
+
+      <div class="search-extraicons">
+        <div class="gpt"><a href="https://chatgpt.com/"><img src="icons/gpt.png" alt="gpt" /></a></div>
+        <div class="minus"><i class="fa-solid fa-minus"></i></div>
+        <div class="apps">
+          <span class="material-symbols-outlined dots-icon">apps</span>
+        </div>
+      </div>
+
+      <!-- Bookmarks and Categories -->
+      <div class="bookmarks-container">
+        <div class="tabs">
+          <button class="tab active">Bookmarks</button>
+          <button class="tab">Web Development</button>
+          <button class="tab add-tab">+</button>
+        </div>
+        <div class="bookmark-icons">
+          <i class="fa-solid fa-bookmark"></i>
+          <i class="fa-solid fa-folder-plus"></i>
+          <i class="fa-solid fa-ellipsis-vertical"></i>
+        </div>
       </div>
       <div class="bookmarks">
-        <a href="#"><img src="facebook.png" alt="Facebook" title="Facebook"></a>
-        <a href="#"><img src="canva.png" alt="Canva" title="Canva"></a>
-        <a href="#"><img src="whatsapp.png" alt="WhatsApp" title="WhatsApp"></a>
-        <a href="#"><img src="youtube-music.png" alt="YouTube Music" title="YouTube Music"></a>
-        <a href="#"><img src="youtube.png" alt="YouTube" title="YouTube"></a>
-        <a href="#"><img src="amazon.png" alt="Amazon" title="Amazon"></a>
-        <a href="#"><img src="pinterest.png" alt="Pinterest" title="Pinterest"></a>
-        <a href="#"><img src="linkedin.png" alt="LinkedIn" title="LinkedIn"></a>
-        <a href="#"><img src="flipkart.png" alt="Flipkart" title="Flipkart"></a>
+        <a href="#"
+          ><img src="icons/facebook.png" alt="Facebook" title="Facebook"
+        /></a>
+        <a href="#"><img src="icons/canva.png" alt="Canva" title="Canva" /></a>
+        <a href="#"
+          ><img src="icons/whatsapp.png" alt="WhatsApp" title="WhatsApp"
+        /></a>
+        <a href="#"
+          ><img src="icons/music.png" alt="YouTube Music" title="YouTube Music"
+        /></a>
+        <a href="#"
+          ><img src="icons/youtube.png" alt="YouTube" title="YouTube"
+        /></a>
+        <a href="#"
+          ><img src="icons/amazon.png" alt="Amazon" title="Amazon"
+        /></a>
+        <a href="#"
+          ><img src="icons/pinterest.png" alt="Pinterest" title="Pinterest"
+        /></a>
+        <a href="#"
+          ><img src="icons/linkedin.png" alt="LinkedIn" title="LinkedIn"
+        /></a>
+        <a href="#"
+          ><img src="icons/flipkart.png" alt="Flipkart" title="Flipkart"
+        /></a>
       </div>
-    </div>
 
-    <!-- Weather Widget -->
-    <div class="weather-widget">
-      <div class="weather-info">
-        <div class="weather-icon">🌞</div>
-        <div class="weather-details">
-          <h3>Jalpaiguri</h3>
-          <p>Clear sky<br>Pressure: 761 mmHg<br>Humidity: 77%</p>
+      <!-- Google icons -->
+       <div class="container2">
+      <div class="google-items">
+        <div>
+          <a href="#"
+            ><img src="icons/account.png" alt="Account" title="Account" />
+          </a>
+          <p>Account</p>
         </div>
-        <div class="temperature">22°C</div>
+        <div>
+          <a href="#"
+            ><img src="icons/google.png" alt="Google" title="Google"
+          /></a>
+          <p>Search</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/google-maps.png" alt="Maps" title="Maps"
+          /></a>
+          <p>Maps</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/youtube.png" alt="YouTube" title="YouTube"
+          /></a>
+          <p>Youtube</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/google-play.png" alt="Playstore" title="Playstore"
+          /></a>
+          <p>Play</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/google-news.png" alt="News" title="News"
+          /></a>
+          <p>News</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/gmail.png" alt="Gmail" title="Gmail"
+          /></a>
+          <p>Gmail</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img
+              src="icons/google-contacts.png"
+              alt="Contacts"
+              title="Contacts"
+          /></a>
+          <p>Contacts</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/google-drive.png" alt="Drive" title="Drive"
+          /></a>
+          <p>Drive</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/calendar.png" alt="Calendar" title="Calendar"
+          /></a>
+          <p>Calender</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/translate.png" alt="Translate" title="Translate"
+          /></a>
+          <p>Translate</p>
+        </div>
+        <div>
+          <a href="#"
+            ><img src="icons/photos.png" alt="Photos" title="Photos"
+          /></a>
+          <p>Photos</p>
+        </div>
+      </div>
+
+      </div>
+
+      <!-- Weather Widget -->
+      <div class="weather-widget">
+        <div class="weather-info">
+          <div class="weather-icon">🌞</div>
+          <div class="weather-details">
+            <h3>Jalpaiguri</h3>
+            <p>Clear sky<br />Pressure: 761 mmHg<br />Humidity: 77%</p>
+            <div class="location">set current location</div>
+          </div>
+          <div class="temperature">22°C</div>
+        </div>
+      </div>
+
+      <!-- Quote Section -->
+      <div class="quote">
+        <blockquote>
+          "If you're changing the world, you're working on important things.
+          You're excited to get up in the morning."
+        </blockquote>
+        <cite>— Larry Page</cite>
+        <div class="arrow"><i class="fa-solid fa-arrow-right"></i></div>
+      </div>
+
+      <!-- Add Note Button -->
+      <div class="add-note">
+        <button>+ Add Note</button>
+      </div>
+
+      <!-- Side Icons (for functionality) -->
+
+      <div class="side-icons">
+        <button title="book">📑</button>
+        <button title="folder">📁</button>
+        <button title="download">⬇️</button>
+        <button title="settings">⚙️</button>
+        <button title="gallery"><i class="fa-regular fa-image"></i></button>
       </div>
     </div>
 
-    <!-- Quote Section -->
-    <div class="quote">
-      <blockquote>"If you're changing the world, you're working on important things. You're excited to get up in the morning."</blockquote>
-      <cite>— Larry Page</cite>
-    </div>
-
-    <!-- Add Note Button -->
-    <div class="add-note">
-      <button>+ Add Note</button>
-    </div>
-
-    <!-- Side Icons (for functionality) -->
-    <div class="side-icons">
-      <button>📑</button>
-      <button>📁</button>
-      <button>⬇️</button>
-      <button>⚙️</button>
-    </div>
-  </div>
-
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
